[FIX] acquirer box border and text wrapping

--- a/addons/care_config_relaunch_v2/static/src/css/care_multistep.css
+++ b/addons/care_config_relaunch_v2/static/src/css/care_multistep.css
@@ -610,15 +610,6 @@ body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data
 }
 
 /* Nav-tabs overrides */
-body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
-#payment_method ul.nav.nav-tabs li {
-    overflow: hidden !important;
-}
-
-body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
-#payment_method ul.nav.nav-tabs li span {
-    word-break: normal !important;
-}
 
 @media only screen and (max-width: 480px) {
     body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
@@ -635,6 +626,26 @@ body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data
     }
 }
 
+/* Acquirer name */
+
+body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
+.tab-acquirer-name {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    width: 100%;
+    word-break: normal !important;
+    display: block;
+    overflow: hidden;
+    padding: 0px;
+    margin: 0px;
+    line-height: 16px;
+    max-height: 32px;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
 
 /* Acquirer messages */
 
